fix vertical alignment in table

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -148,6 +148,10 @@
   color: #fff;
 }
 
+.table td {
+  vertical-align: middle;
+}
+
 .card-header {
   margin: -20px 15px 0;
   border-radius: 3px;
